clusters/homelab-1/.network-policies/allow-egress-to-minio/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-minio
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: storage
          podSelector:
            matchLabels:
              app.kubernetes.io/name: minio-app
              app.kubernetes.io/instance: minio-app
      ports:
        - protocol: TCP
          port: api
